2006-12-31  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated documentation for release
	* NEWS: updated documentation for release
	* README: updated documentation for release
	* README-cvs: updated documentation for release
	* THANKS: updated documentation for release

2006-12-29  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/openss7.texi: updateding documentation for release
	* doc/manual/configure.texi: changes for sucessful master build
	* doc/manual/openss7.texi: changes for sucessful master build
	* doc/manual/prerequisites.texi: changes for sucessful master build
	* doc/manual/rpm.texi: changes for sucessful master build
	* doc/manual/tree.texi: changes for sucessful master build

2006-12-28  Brian Bidulock  <bidulock@openss7.org>

	* m4/chan.m4: use cache names for master src and build directories
	* m4/inet.m4: use cache names for master src and build directories
	* m4/isdn.m4: use cache names for master src and build directories
	* m4/iso.m4: use cache names for master src and build directories
	* m4/nsl.m4: use cache names for master src and build directories
	* m4/sctp.m4: use cache names for master src and build directories
	* m4/sigtran.m4: use cache names for master src and build directories
	* m4/sock.m4: use cache names for master src and build directories
	* m4/ss7.m4: use cache names for master src and build directories
	* m4/strcomp.m4: use cache names for master src and build directories
	* m4/streams.m4: use cache names for master src and build directories
	* m4/voip.m4: use cache names for master src and build directories
	* m4/xns.m4: use cache names for master src and build directories
	* m4/xti.m4: use cache names for master src and build directories

2006-12-18  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: adjust package defaults
	* m4/strconf.m4: adjust default major base

2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>
