@@ -1,3 +1,10 @@
+2007-01-08  Brian Bidulock  <bidulock@openss7.org>
+
+	* Makefile.am: got manual pages building and installing separately
+	* am/help.am: got manual pages building and installing separately
+	* am/man.am: got manual pages building and installing separately
+	* am/openss7.am: got manual pages building and installing separately
+
 2006-12-31  Brian Bidulock  <bidulock@openss7.org>
 
 	* AUTHORS: updated documentation for release
